# OpenCPN-Android

./: .gitignore  build.gradle  gradle.properties  settings.gradle
FileManager/: build.gradle
FileManager/src/main/: AndroidManifest.xml
FileManager/src/main/res/anim/: state_list_anim_material.xml
FileManager/src/main/res/drawable/: bg_activated.xml  bg_item_circle.xml  ic_about_google_play.xml  ic_about_mail.xml  ic_action_box.xml  ic_action_edit.xml  ic_action_paste.xml  ic_action_paste_nine.xml  ic_action_paste_one.xml  ic_action_paste_seven.xml  ic_action_paste_two.xml  ic_button_permission.xml  ic_dialog_delete.xml  ic_item_android_package.xml  ic_item_archive.xml  ic_item_audio.xml  ic_item_file.xml  ic_item_folder.xml  ic_item_sdcard.xml  ic_item_text.xml  ic_logo.xml  ic_menu.xml  ic_navbar_close.xml  ic_navbar_edit.xml  ic_pref_media_library.xml  ic_pref_palette.xml  ic_pref_sort_ascending.xml  ic_sidenav_about.xml  ic_sidenav_settings.xml  ic_sidenav_title.xml  ic_stat_notify_extract.xml  ic_stat_notify_paste.xml
FileManager/src/main/res/drawable-v23/: ic_button_permission.xml
FileManager/src/main/res/layout/: activity_filemanager.xml  dialog_details.xml  fragment_filelist.xml  fragment_filelist_pick.xml  fragment_filelist_simple.xml  item_filelist.xml  widget_pathview.xml  widget_toolbar.xml
afilechooser2/: build.gradle
afilechooser2/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dsr/minimalcpp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  AndroidManifest.xml.minimal
app/src/main/assets/--Added-by-androiddeployqt--/: qt_cache_pregenerated_file_list
app/src/main/assets/files/locale/de/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/locale/es/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/locale/fi/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/locale/fr/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/locale/nb/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/locale/sv/LC_MESSAGES/: opencpn-chartdldr_pi.mo  opencpn-dashboard_pi.mo  opencpn-grib_pi.mo  opencpn-squiddio_pi.mo  opencpn-wmm_pi.mo  opencpn.mo
app/src/main/assets/files/plugins/chartdldr_pi/data/: chart_sources.xml
app/src/main/cpp/: minimal.cpp  native-lib.cpp  ocpn_wrapper.cpp
app/src/main/java/com/arieslabs/assetbridge/: Assetbridge.java
app/src/main/java/com/example/dsr/minimalcpp/: MyActivity.java
app/src/main/java/com/google/android/gms/location/sample/locationupdatesforegroundservice/: LocationUpdatesService.java  Utils.java
app/src/main/java/com/hoho/android/usbserial/driver/: CdcAcmSerialDriver.java  ProlificSerialDriver.java  UsbId.java
app/src/main/java/org/opencpn/: ColorPickerDialog.java  DownloadFileSingleActivity.java  DownloadService.java  GPSServer.java  OCPNGRIBActivity.java  OCPNGRIBDisplayPrefActivity.java  OCPNGRIBDownloadPrefActivity.java  OCPNGpsNmeaListener.java  OCPNMapsActivity.java  OCPNNativeLib.java  OCPNPluginInstallerActivity.java  OCPNSettingsFragmentConnections.java  SafUtils.java  SeekBarPreference.java  UnzipService.java  UsbSerialHelper.java  WebViewActivity.java  downloadGFSCombine.java  downloadGRIBSingle.java
app/src/main/java/org/qtproject/qt5/android/bindings/: QtActivity.java  QtApplication.java  QtLoader.java
app/src/main/res/layout/: activity_main.xml  activity_maps.xml  grib_display_activity_layout.xml  grib_download_activity_layout.xml
app/src/main/res/menu/: activity_main_actions.xml
app/src/main/res/raw/: your_storageshare_de_crt
app/src/main/res/values/: arrays.xml  libs.xml  strings.xml  styles.xml
app/src/main/res/xml/: device_filter.xml  grib_airtemp_display_settings.xml  grib_cape_display_settings.xml  grib_cloud_display_settings.xml  grib_current_display_settings.xml  grib_download_settings.xml  grib_gust_display_settings.xml  grib_pressure_display_settings.xml  grib_rainfall_display_settings.xml  grib_seatemp_display_settings.xml  grib_wave_display_settings.xml  grib_wind_display_settings.xml  preferences_connections.xml  preferences_display_basic.xml
app/src/qtgen/android-build/: AndroidManifest.xml  Makefile  android-libgradle.so-deployment-settings.json  android-libtemplates.so-deployment-settings.json  gradle.properties
app/src/qtgen/android-build/res/values/: libs.xml
app/src/test/java/com/example/dsr/minimalcpp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lobsterpicker/: build.gradle
lobsterpicker/src/main/: AndroidManifest.xml
materialfilemanager/: build.gradle
materialfilemanager/src/main/: AndroidManifest.xml
(+278 files in other folders)
